--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
             <p id="studentsummary"></p>
         </div>
         <div id="output"></div>
+        <div id="output2"></div>
+
+        
 
     </div>
 
